--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,15 @@
 name: xrange
-version: 0.0.9
+version: 1.0.0
 description: Provides classes and methods allowing to work with ranges
 homepage: https://github.com/gyrdym/xrange
 
 environment:
   sdk: '>=2.7.0 <3.0.0'
 
-dependencies:
-  injector: ^1.0.9
-
 dev_dependencies:
   build_runner: ^1.1.2
   build_test: ^0.10.2
-  grinder: ^0.8.3
-  ml_tech: ^0.0.8
   mockito: ^4.1.1
+  pedantic: ^1.9.2
   test: ^1.2.0
+  test_coverage: ^0.5.0
