--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,13 @@
 name: xrange
-version: 1.0.0
+version: 2.0.0-nullsafety.0
 description: Provides classes and methods allowing to work with ranges
 homepage: https://github.com/gyrdym/xrange
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dev_dependencies:
-  build_runner: ^1.1.2
-  build_test: ^0.10.2
-  mockito: ^4.1.1
-  pedantic: ^1.9.2
-  test: ^1.2.0
+  mockito: ^5.0.0-nullsafety.5
+  pedantic: ^1.10.0-nullsafety.3
+  test: ^1.16.0-nullsafety.17
   test_coverage: ^0.5.0
