--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: xrange
-version: 2.0.0-nullsafety.0
+version: 2.0.0
 description: Provides classes and methods allowing to work with ranges
 homepage: https://github.com/gyrdym/xrange
 
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dev_dependencies:
-  mockito: ^5.0.0-nullsafety.5
-  pedantic: ^1.10.0-nullsafety.3
-  test: ^1.16.0-nullsafety.17
-  test_coverage: ^0.5.0
+  mockito: ^5.0.0
+  pedantic: ^1.10.0
+  test: ^1.16.0
